# SamsCalc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-ec6ed7e75c2ad32a8521.json  cmakeFiles-v1-866030d670214046aa55.json  codemodel-v2-c71f1b4e8d0ebeedc7ee.json  index-2022-12-20T23-41-23-0511.json  target-samscalc-f1558f66d1b44b599d13.json
cmake/: sourcelist.cmake
hdr/: calc.h  calcgui.h
src/: calc.c  calcgui.c  calculator.c  calculator.h  main.c  parser.c  parser.h  pile.h  token.c  token.h  tree.c  tree.h
